# AXIOM

./: .clinerules  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  flake.nix  implementation_plan.md  wsl2_nix_setup.md
.agents/: CONTEXT.md  SKILL_MAP.md
.agents/config/: models.json
.agents/decisions/: ADR-001-surrealdb-multitenancy.md  ADR-002-temporal-sobre-tokio-spawn.md  ADR-003-groq-sobre-openai.md
.agents/rules/: apex-planning.md  apex-rules.md  architect-planning.md  claude-core.md  decision-gate.md  obsidian-enforcer.md
.agents/skills/apex-persistence/: SKILL.md
.agents/skills/apex-ui-ux/: SKILL.md
.agents/skills/axum-tokio/: SKILL.md
.agents/skills/conventional-commits/: SKILL.md
.agents/skills/meta-whatsapp/: SKILL.md
.agents/skills/nextjs-strict/: SKILL.md
.agents/skills/nix-flake-master/: SKILL.md
.agents/skills/temporal-orchestration/: SKILL.md
.agents/skills/temporal-rust/: SKILL.md
.agents/workflows/: audit-red-team.md  cron-build.md  mockup-ui.md  persistent-shell.md  review-security.md  sandwich.md  sync-obsidian.md  temporal-scaffold.md  test-e2e.md
.devcontainer/: devcontainer.json  docker-compose.yml
.direnv/: flake-profile-1-link  flake-profile-5-link  flake-profile-6-link  flake-profile-7-link  flake-profile-9-link
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: 2026-06-04-arquitectura-seguridad-webhook.md  APEX_ANTIGRAVITY_MANUAL.md
docs_sincronizacion/: 2026-06-09-sincronizacion.md
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/playwright-report/: index.html
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(dashboard)/dashboard/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/dashboard/whatsapp/: page.tsx
frontend/src/app/(public)/: page.tsx
frontend/src/components/: AsymmetricCalculator.tsx  DataFlowInteractive.tsx  NeuroLandingClient.tsx  ObjectionTerminal.tsx  ParticleBackground.tsx
frontend/src/components/ui/: border-beam.tsx  magnetic-button.tsx  number-ticker.tsx
frontend/tests/: landing.spec.ts
src/: config.rs  error.rs  main.rs  models.rs  state.rs  whatsapp.rs
src/domain/: tenant.rs
src/handlers/: mod.rs
src/temporal/: activities.rs  mod.rs  workflows.rs
src/temporal/activities/: ingestion_whatsapp.rs  mod.rs
src/temporal/workflows/: ingestion_whatsapp.rs  mod.rs
