[package]
name    = "bot-ia-backend"
version = "0.1.0"
edition = "2021"

[features]
# Activar cuando el SDK de Temporal tenga release estable en crates.io:
# cargo build --features temporal
temporal = []

[dependencies]
tokio      = { version = "1",    features = ["full"] }
axum       = { version = "0.8" }
serde      = { version = "1",    features = ["derive"] }
serde_json = { version = "1" }
hmac       = { version = "0.12" }
sha2       = { version = "0.10" }
hex        = { version = "0.4"  }
subtle     = { version = "2"    }
reqwest            = { version = "0.12", features = ["json"] }
surrealdb          = { version = "2",    features = ["kv-surrealkv"] }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3",  features = ["env-filter"] }
thiserror          = "2"
config             = "0.14"
dotenvy            = "0.15"
temporalio-client = { git = "https://github.com/temporalio/sdk-rust", branch = "main" }
temporalio-sdk = { git = "https://github.com/temporalio/sdk-rust", branch = "main" }
temporalio-sdk-core = { git = "https://github.com/temporalio/sdk-rust", branch = "main" }
temporalio-macros = { git = "https://github.com/temporalio/sdk-rust", branch = "main" }
temporalio-workflow = { git = "https://github.com/temporalio/sdk-rust", branch = "main" }
temporalio-common = { git = "https://github.com/temporalio/sdk-rust", branch = "main" }
futures-util = "0.3"
uuid               = { version = "1.0", features = ["v4", "fast-rng"] }
anyhow = "1.0.102"
futures = "0.3.32"
